[package]
name = "cbindgen-meta"
version = "0.1.0"
authors = ["Connor Fitzgerald <connorwadefitzgerald@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unity-rust-test = { path = "../unity-rust-test" }
unity-rust-test-2 = { path = "../unity-rust-test-2" }
