[package]
name = "unity-rust-test"
version = "0.0.0"
authors = ["Connor Fitzgerald <connorwadefitzgerald@gmail.com>"]
edition = "2018"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unity-rust-test-2 = { path = "../unity-rust-test-2" }

[lib]
crate-type = ["cdylib", "rlib"]